--- a/.github/workflows/main_mysimpleflaskapp.yml
+++ b/.github/workflows/main_mysimpleflaskapp.yml
@@ -17,10 +17,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up Python version
+      - name: Setup Python 3.11
         uses: actions/setup-python@v1
         with:
-          python-version: '3.11'
+          python-version: 3.11
 
       - name: Create and start virtual environment
         run: |
