--- a/.github/workflows/main_mysimpleflaskapp.yml
+++ b/.github/workflows/main_mysimpleflaskapp.yml
@@ -28,7 +28,9 @@ jobs:
           source venv/bin/activate
       
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
       
@@ -60,4 +62,4 @@ jobs:
         with:
           app-name: 'mysimpleflaskapp'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_B62A0489E63B4E5B85CA694C119BEE71 }}
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
