--- a/.github/workflows/main_ladu123.yml
+++ b/.github/workflows/main_ladu123.yml
@@ -58,6 +58,6 @@ jobs:
         uses: azure/webapps-deploy@v2
         id: deploy-to-webapp
         with:
-          app-name: 'mdxapp'
+          app-name: 'mysimpleflaskapp'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
